# sysv-logging

./: .gitignore  License  README.md  pyproject.toml  requirements.txt  setup.py
sysv_logging/: filter.py  handler.py
