[tool.poetry]
name = "sysv-logging"
version = "0.1.2"
description = "Shared memory logging. Logger uses system V message queues"
keywords = ["sysv", "logging", "shared memory"]
repository = "https://github.com/kravtsov-ilia/sysv-logging.git"
authors = ["Ilia Kravtsov <kravcov2512@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sysv_logging"}]
classifiers = [
'Development Status :: 3 - Alpha',
'Intended Audience :: Developers',
'Topic :: System :: Logging',
'License :: OSI Approved :: MIT License',
'Programming Language :: Python :: 3',
'Programming Language :: Python :: 3.7',
'Programming Language :: Python :: 3.8',
'Programming Language :: Python :: 3.9',
'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.7"
sysv-ipc = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
